```text
classDiagram
    direction LR

    class User {
        -String username
        -double cashBalance
        -Portfolio portfolio
        -TransactionLog transactionLog
    }

    class Portfolio {
        -ArrayList~Investment~ investments
        +addInvestment()
        +removeInvestment()
        +getRealTotalValue()
    }

    class Investment {
        -String ticker
        -String companyName
        -double shares
        -double purchasePrice
        -double currentPrice
        +getValue()
        +getPercentChange()
    }

    class TransactionLog {
        -ArrayList~Transaction~ transactions
        +addTransaction()
    }

    class Transaction {
        -String transactionType
        -String ticker
        -double shares
        -double transactionPrice
        -double amountInvested
    }

    class UserTrading {
        +purchaseStock()
        +sellStock()
    }

    class UserDataManager {
        +loadUser()
        +saveUser()
        +createUser()
    }

    class PriceStream {
        +connect()
        +subscribe()
        +getPrice()
    }

    User *-- Portfolio
    User *-- TransactionLog
    Portfolio *-- Investment
    TransactionLog *-- Transaction

    UserTrading ..> User
    UserTrading ..> Investment
    UserTrading ..> Transaction

    UserDataManager ..> User
    PriceStream ..> Investment
```